@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u524dADOR\u5a1b\u6a02CEO\u9594\u7199\u73cd\u7206\u6599\u6d77\u8b5c\u6284\u8972NewJeans\u6982\u5ff5\uff01\u5167\u90e8\u5439\u54e8\u4eba\u51fa\u9762\u6307\u63a7", "description": "\u524dADOR\u5a1b\u6a02CEO\u9594\u7199\u73cd\u7206\u6599\u6d77\u8b5c\u6284\u8972NewJeans\u6982\u5ff5\uff01\u5167\u90e8\u5439\u54e8\u4eba\u51fa\u9762\u6307\u63a7", "url": "https://www.famechos.me/news/\u524dADOR\u5a1b\u6a02CEO\u9594\u7199\u73cd\u7206\u6599\u6d77\u8b5c\u6284\u8972NewJeans\u6982\u5ff5\uff01\u5167\u90e8\u5439\u54e8\u4eba\u51fa\u9762\u6307\u63a7.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T09:31:45.335056+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控.html"/>
+<meta name="description" content="前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控，娛樂圈震驚。閔熙珍公開指控海譜抄襲NewJeans概念，引發爭議。">
+
+<meta name="keywords" content="閔熙珍, 海譜, NewJeans, 抄襲, 娛樂圈, 爆料, 內部吹哨人">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控.html" />
+        <meta property="og:title" content="前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控" />
+        <meta property="og:description" content="前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控" />
+        <meta property="twitter:description" content="前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>海譜與前ADOR娛樂CEO閔熙珍的法律糾紛又有新進展。一名內部吹哨人在首爾中央地方法院的一場聽證會上提供了新的證據，指控BELIFT LAB旗下的新人K-pop女團ILLIT（阿伊利特）抄襲了NewJeans的概念。</p>
+<p>據悉，閔熙珍的訴訟中的一個關鍵問題是ILLIT抄襲NewJeans的新證據浮出水面。閔熙珍聲稱，她對這個問題的投訴導致海譜在3月份啟動了內部審計。</p>
+<p>閔熙珍的律師團隊透露，海譜的一名內部員工透露，ILLIT的創意總監在ILLIT成立初期曾要求查看NewJeans的項目計劃。吹哨人聲稱，兩個團體的概念完全相同。</p>
+<p>閔熙珍的律師團隊出示了文字消息和電話錄音，引用吹哨人的話說：“我從未想過他們會把它做得完全一樣……他們一定是看了所有這些，為什麼還要否認？這讓我感到非常不舒服。”</p>
+<p>海譜堅決否認抄襲指控。BELIFT LAB也否認了這些指控，並正在對閔熙珍提起誹謗訴訟。</p>
+<p>糾紛的核心是閔熙珍聲稱海譜違反了股東協議，將她從ADOR娛樂董事會中撤職，迫使她辭去董事長職務，儘管法院在5月份頒布了禁止這種行為的禁令。</p>
+<p>閔熙珍向首爾中央地方法院提交了另一份禁令，要求召開ADOR娛樂的緊急股東大會，並恢復她的董事職務。</p>
+<p>閔熙珍的律師團隊指出了一份有效期為5年的股東協議，該協議自2021年11月起生效。他們聲稱海譜違反了這份協議，將閔熙珍撤職。最近的禁令旨在迫使海譜董事會投票贊成恢復閔熙珍的董事職務。</p><p>閔熙珍與母公司海譜的糾紛仍未解決。海譜方面強調了ADOR娛樂在閔熙珍的管理下取得的快速成功，2023年的收入達到了110.2億韓元（8150萬美元），營業利潤達到了33.5億韓元，僅用了兩年時間就使海譜的初始投資16.1億韓元翻倍。</p>
+<p>閔熙珍則認為，衝突的根源在於母公司的背叛、虐待和騷擾。她還指控海譜進行了抹黑運動，掩蓋了針對NewJeans成員范玉欣的工作場所欺凌，並允許ILLIT抄襲NewJeans的概念。</p>
+<p>海譜反駁閔熙珍的指控，指控她僱用外部專家，並與ADOR娛樂的副董事長李尚宇合作，試圖將ADOR娛樂建立為一個獨立實體——這些行動被母公司視為破壞信任。</p>
+<p>這場糾紛仍然沒有任何解決的跡象，因為雙方繼續相互指控背叛。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/twQltTSX7Vo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！.html">K-pop 商品銷售商的「粉絲剝削」行為只被罰款 300 萬？議員怒轟：懲罰太輕！</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫.html">K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html">K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
