@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 09:29:44 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 09:31:52 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -109,5 +109,11 @@
   <description>搬到日本我們有專業級別的情報幫助你順暢過渡搬到日本有很多指南但只有經驗才能提供專業級別的情報無論你是在東京鄉村還是在兩者之間這些貼士都會幫助你順暢過渡1獲得本地...</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 09:29:44 +0800</pubDate>
+</item><item>
+  <title>前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控</title>
+  <link>https://www.famechos.me/news/前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控.html</link>
+  <description>前ADOR娛樂CEO閔熙珍在與海譜的法律戰中取得進展海譜與前ADOR娛樂CEO閔熙珍的法律糾紛又有新進展一名內部吹哨人在首爾中央地方法院的一場聽證會上提供了新的證據指控BELIFTLAB旗下的新人Kpop女團ILLIT阿伊利特抄襲了NewJeans的概念據悉閔熙珍的訴訟中的一個關鍵問題是ILLIT抄襲NewJeans的新證據浮出水面閔熙珍聲稱她對這個問題的...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 09:31:52 +0800</pubDate>
 </item></channel>
 </rss>
