@@ -110,4 +110,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T09:31:52+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
