@@ -15,3 +15,4 @@ https://www.koreaherald.com/view.php?ud=20241002050661
 https://www.koreaherald.com/view.php?ud=20241007050694
 https://tokyocheapo.com/editorial/halloween-2024-new-rules-shibuya-shinjuku/
 https://www.koreaherald.com/view.php?ud=20241010050652
+https://tokyocheapo.com/living/moving-to-japan-hacks/
